--- a/vignettes/bib.bib
+++ b/vignettes/bib.bib
@@ -1,8 +1,19 @@
+@Manual{Steen2015,
+    title = {\pkg{medflex}: Flexible Mediation Analysis Using Natural
+      Effect Models},
+    author = {Johan Steen and Tom Loeys and Beatrijs Moerkerke and
+      Stijn Vansteelandt},
+    year = {2015},
+    note = {\proglang{R}~package version~0.5-0},
+  url = {http://CRAN.R-project.org/package=medflex},
+  }
+
+
 @Book{Hayes2013,
   author = {Andrew F Hayes},
   isbn = {1462511279},
   publisher = {Guilford Press},
-  title = {{Introduction to mediation, moderation, and conditional process analysis: A regression-based approach}},
+  title = {{Introduction to Mediation, Moderation, and Conditional Process Analysis: A Regression-based Approach}},
   year = {2013},
 }
 
@@ -23,7 +34,7 @@
   number = {4},
   pages = {550--558},
   pmid = {20307128},
-  title = {{Yes, but what's the mechanism? (don't expect an easy answer).}},
+  title = {{Yes, But What's the Mechanism? (Don't Expect an Easy Answer).}},
   volume = {98},
   year = {2010},
 }
@@ -36,7 +47,7 @@
   number = {5},
   pages = {550--60},
   pmid = {10955408},
-  title = {{Marginal structural models and causal inference in epidemiology}},
+  title = {{Marginal Structural Models and Causal Inference in Epidemiology}},
   volume = {11},
   year = {2000},
 }
@@ -68,13 +79,13 @@
 @InProceedings{Pearl2001,
   address = {San Francisco, CA, USA},
   author = {Judea Pearl},
-  booktitle = {Proceedings of the Seventeenth conference on Uncertainty in artificial intelligence},
+  booktitle = {Proceedings of the Seventeenth Conference on Uncertainty in Artificial Intelligence},
   file = {:Users/johansteen/Documents/ugent/papers//Pearl - 2001 - Proceedings of the Seventeenth conference on Uncertainty in artificial intelligence.pdf:pdf},
   isbn = {1-55860-800-1},
   pages = {411--420},
   publisher = {Morgan Kaufmann Publishers Inc.},
   series = {UAI'01},
-  title = {{Direct and indirect effects}},
+  title = {{Direct and Indirect Effects}},
   url = {http://dl.acm.org/citation.cfm?id=2074022.2074073},
   year = {2001},
 }
@@ -87,7 +98,7 @@
   number = {6},
   pages = {852--63},
   pmid = {16393020},
-  title = {{When moderation is mediated and mediation is moderated.}},
+  title = {{When Moderation is Mediated and Mediation is Moderated.}},
   volume = {89},
   year = {2005},
 }
@@ -97,7 +108,7 @@
   number = {S457581},
   publisher = {Boston College Department of Economics},
   series = {Statistical Software Components},
-  title = {{PARAMED: Stata module to perform causal mediation analysis using parametric regression models}},
+  title = {{\pkg{PARAMED}: \proglang{Stata} Module to Perform Causal Mediation Analysis Using Parametric Regression Models}},
   url = {http://ideas.repec.org/c/boc/bocode/s457581.html},
   year = {2013},
 }
@@ -123,7 +134,7 @@
   number = {3},
   pages = {234--49},
   pmid = {20822250},
-  title = {{Propensity score techniques and the assessment of measured covariate balance to test causal associations in psychological research.}},
+  title = {{Propensity Score Techniques and the Assessment of Measured Covariate Balance to Test Causal Associations in Psychological Research.}},
   volume = {15},
   year = {2010},
 }
@@ -136,7 +147,7 @@
   number = {July},
   pages = {26},
   pmid = {21607077},
-  title = {{Confidence intervals permit, but do not guarantee, better inference than statistical significance testing.}},
+  title = {{Confidence Intervals Permit, But Do Not Guarantee, Better Inference than Statistical Significance Testing.}},
   volume = {1},
   year = {2010},
 }
@@ -149,7 +160,7 @@
   number = {4},
   pages = {642--64},
   pmid = {22905648},
-  title = {{Assessing mediation using marginal structural models in the presence of confounding and moderation}},
+  title = {{Assessing Mediation Using Marginal Structural Models in the Presence of Confounding and Moderation}},
   volume = {17},
   year = {2012},
 }
@@ -162,7 +173,7 @@
   file = {:Users/johansteen/Documents/ugent/papers/Robins - 2003 - Highly Structured Stochastic Systems.pdf:pdf},
   pages = {70--81},
   publisher = {Oxford University Press},
-  title = {{Semantics of causal DAG models and the identification of direct and indirect effects}},
+  title = {{Semantics of Causal DAG Models and the Identification of Direct and Indirect Effects}},
   year = {2003},
 }
 
@@ -186,7 +197,7 @@
   number = {6},
   pages = {1173--1182},
   pmid = {3806354},
-  title = {{The moderator–mediator variable distinction in social psychological research: Conceptual, strategic, and statistical considerations.}},
+  title = {{The Moderator-Mediator Variable Distinction in Social Psychological Research: Conceptual, Strategic, and Statistical Considerations.}},
   volume = {51},
   year = {1986},
 }
@@ -260,7 +271,7 @@
   number = {6},
   pages = {889--91},
   pmid = {23038112},
-  title = {{Understanding counterfactual-based mediation analysis approaches and their differences.}},
+  title = {{Understanding Counterfactual-Based Mediation Analysis Approaches and Their Differences.}},
   volume = {23},
   year = {2012},
 }
@@ -273,7 +284,7 @@
   number = {2},
   pages = {137--50},
   pmid = {23379553},
-  title = {{Mediation analysis allowing for exposure-mediator interactions and causal interpretation: theoretical assumptions and implementation with \proglang{SAS} and \proglang{SPSS} macros.}},
+  title = {{Mediation Analysis Allowing for Exposure-Mediator Interactions and Causal Interpretation: Theoretical Assumptions and Implementation with \proglang{SAS} and \proglang{SPSS} Macros.}},
   volume = {18},
   year = {2013},
 }
@@ -285,7 +296,7 @@
   month = {nov},
   pages = {451--470},
   pmid = {24188158},
-  title = {{Statistical mediation analysis with a multicategorical independent variable.}},
+  title = {{Statistical Mediation Analysis with a Multicategorical Independent Variable.}},
   volume = {67},
   year = {2014},
 }
@@ -310,7 +321,7 @@
   number = {4},
   pages = {582--585},
   pmid = {21642779},
-  title = {{Causal mediation analysis with survival data.}},
+  title = {{Causal Mediation Analysis with Survival Data.}},
   volume = {22},
   year = {2011},
 }
@@ -323,7 +334,7 @@
   number = {4},
   pages = {513--8},
   pmid = {24264291},
-  title = {{Assessing natural direct and indirect effects through multiple pathways.}},
+  title = {{Assessing Natural Direct and Indirect Effects through Multiple Pathways.}},
   volume = {179},
   year = {2014},
 }
@@ -358,7 +369,7 @@
   journal = {Biometrika},
   number = {2},
   pages = {321--334},
-  title = {{Estimation of the time-dependent accelerated failure time model in the presence of confounding factors}},
+  title = {{Estimation of the Time-Dependent Accelerated Failure Time Model in the Presence of Confounding Factors}},
   volume = {79},
   year = {1992},
 }
@@ -409,7 +420,7 @@
   number = {12},
   pages = {1339--48},
   pmid = {21036955},
-  title = {{Odds ratios for mediation analysis for a dichotomous outcome.}},
+  title = {{Odds Ratios for Mediation Analysis for a Dichotomous Outcome.}},
   volume = {172},
   year = {2010},
 }
@@ -422,7 +433,7 @@
   number = {4},
   pages = {309--334},
   pmid = {20954780},
-  title = {{A general approach to causal mediation analysis.}},
+  title = {{A General Approach to Causal Mediation Analysis.}},
   volume = {15},
   year = {2010},
 }
@@ -447,7 +458,7 @@
   number = {1},
   pages = {74--87},
   pmid = {23787715},
-  title = {{Bias associated with using the estimated propensity score as a regression covariate.}},
+  title = {{Bias Associated with Using the Estimated Propensity Score as a Regression Covariate.}},
   volume = {33},
   year = {2014},
 }
@@ -460,7 +471,7 @@
   number = {6},
   pages = {879--88},
   pmid = {23007042},
-  title = {{Distribution-free mediation analysis for nonlinear models with confounding.}},
+  title = {{Distribution-Free Mediation Analysis for Nonlinear Models with Confounding.}},
   volume = {23},
   year = {2012},
 }
@@ -509,7 +520,7 @@
   journal = {Biometrika},
   number = {1},
   pages = {41--55},
-  title = {{The central role of the propensity score in observational studies for causal effects}},
+  title = {{The Central Role of the Propensity Score in Observational Studies for Causal Effects}},
   volume = {70},
   year = {1983},
 }
@@ -528,7 +539,7 @@
   file = {:Users/johansteen/Documents/ugent/papers/Albert - 2008 - Statistics in Medicine.pdf:pdf},
   journal = {Statistics in Medicine},
   pages = {1282--1304},
-  title = {{Mediation analysis via potential outcomes models}},
+  title = {{Mediation Analysis via Potential Outcomes Models}},
   volume = {27},
   year = {2008},
 }
@@ -559,11 +570,11 @@
   address = {College Station, TX},
   author = {Rhian M Daniel and Bianca L  {De Stavola} and Simon N Cousens},
   file = {:Users/johansteen/Documents/ugent/papers//Daniel, De Stavola, Cousens - 2011 - Stata Journal.pdf:pdf},
-  journal = {Stata Journal},
+  journal = {The \proglang{Stata} Journal},
   number = {4},
   pages = {479--517},
   publisher = {Stata Press},
-  title = {{gformula: Estimating causal effects in the presence of time-varying confounding or mediation using the g-computation formula}},
+  title = {{\pkg{gformula}: Estimating Causal Effects in the Presence of Time-Varying Confounding or Mediation Using the G-computation Formula}},
   volume = {11},
   year = {2011},
 }
@@ -589,7 +600,7 @@
   number = {3},
   pages = {357--369},
   pmid = {22081755},
-  title = {{Estimating Causal Effects in Mediation Analysis using Propensity Scores}},
+  title = {{Estimating Causal Effects in Mediation Analysis Using Propensity Scores}},
   volume = {18},
   year = {2011},
 }
@@ -648,7 +659,7 @@
   journal = {Statistics and Its Interface},
   number = {4},
   pages = {457--468},
-  title = {{Conceptual issues concerning mediation, interventions and composition}},
+  title = {{Conceptual Issues Concerning Mediation, Interventions and Composition}},
   volume = {2},
   year = {2009},
 }
@@ -674,7 +685,7 @@
   number = {4},
   pages = {754--68},
   pmid = {16783757},
-  title = {{Conditioning on the propensity score can result in biased estimation of common measures of treatment effect: a Monte Carlo study.}},
+  title = {{Conditioning on the Propensity Score Can Result in Biased Estimation of Common Measures of Treatment Effect: A Monte Carlo Study.}},
   volume = {26},
   year = {2007},
 }
@@ -686,7 +697,7 @@
   journal = {Clinical Trials},
   pages = {499--513},
   pmid = {17942466},
-  title = {{The intermediate endpoint effect in logistic and probit regression}},
+  title = {{The Intermediate Endpoint Effect in Logistic and Probit Regression}},
   volume = {4},
   year = {2007},
 }
@@ -699,7 +710,7 @@
   number = {4},
   pages = {717--31},
   pmid = {15641418},
-  title = {{\proglang{SPSS} and \proglang{SAS} procedures for estimating indirect effects in simple mediation models.}},
+  title = {{\proglang{SPSS} and \proglang{SAS} Procedures for Estimating Indirect Effects in Simple Mediation Models.}},
   volume = {36},
   year = {2004},
 }
@@ -712,7 +723,7 @@
   number = {3},
   pages = {1028--38},
   pmid = {21306353},
-  title = {{Generalized causal mediation analysis.}},
+  title = {{Generalized Causal Mediation Analysis.}},
   volume = {67},
   year = {2011},
 }
@@ -724,7 +735,7 @@
   month = {jun},
   number = {3},
   pages = {1816--1845},
-  title = {{Semiparametric theory for causal mediation analysis: Efficiency bounds, multiple robustness and sensitivity analysis}},
+  title = {{Semiparametric Theory for Causal Mediation Analysis: Efficiency Bounds, Multiple Robustness and Sensitivity Analysis}},
   volume = {40},
   year = {2012},
 }
@@ -737,8 +748,8 @@
   file = {:Users/johansteen/Documents/ugent/papers/Pearl - 2012 - Causality Statistical Perspectives and Applications.pdf:pdf;:Users/johansteen/Documents/ugent/papers/Pearl - 2012 - Causality Statistical Perspectives and Applications(2).pdf:pdf},
   number = {October 2011},
   pages = {151--179},
-  publisher = {John Wiley and Sons},
-  title = {{The mediation formula: A guide to the assessment of causal pathways in nonlinear models}},
+  publisher = {John Wiley \& Sons},
+  title = {{The Mediation Formula: A Guide to the Assessment of Causal Pathways in Nonlinear Models}},
   year = {2012},
 }
 
@@ -749,7 +760,7 @@
   file = {:Users/johansteen/Documents/ugent/papers/Hong - 2010 - Proceedings of the American Statistical Association, Biometrics Section.pdf:pdf},
   pages = {2401--2415},
   publisher = {American Statistical Association},
-  title = {{Ratio of mediator probability weighting for estimating natural direct and indirect effects}},
+  title = {{Ratio of Mediator Probability Weighting for Estimating Natural Direct and Indirect Effects}},
   year = {2010},
 }
 
@@ -778,16 +789,6 @@
   year = {1995},
 }
 
-@Article{Tingley2014,
-  author = {Dustin Tingley and Teppei Yamamoto and Kentaro Hirose and Luke Keele and Kosuke Imai},
-  file = {:Users/johansteen/Documents/ugent/papers//Tingley et al. - 2014 - Journal of Statistical Software.pdf:pdf},
-  journal = {Journal of Statistical Software},
-  number = {5},
-  title = {{mediation: \proglang{R} Package for Causal Mediation Analysis}},
-  volume = {59},
-  year = {2014},
-}
-
 @Article{Loeys2014,
   author = {Tom Loeys and Beatrijs Moerkerke and An Raes and Yves Rosseel and Stijn Vansteelandt},
   file = {:Users/johansteen/Documents/ugent/papers/Loeys et al. - 2014 - Structural Equation Modeling A Multidisciplinary Journal.pdf:pdf},
@@ -795,7 +796,7 @@
   month = {jun},
   number = {June 2014},
   pages = {1--12},
-  title = {{Estimation of Controlled Direct Effects in the Presence of Exposure-Induced Confounding and Latent Variables}},
+  title = {{Estimation of Controlled Direct Effects in the Presence of Exposure-Induced Confounding and Latent Variables.}},
   year = {2014},
 }
 
@@ -806,7 +807,7 @@
   month = {mar},
   number = {1},
   pages = {73--101},
-  title = {{Robust Estimation of a Location Parameter}},
+  title = {{Robust Estimation of a Location Parameter.}},
   volume = {35},
   year = {1964},
 }
@@ -819,7 +820,7 @@
   number = {4},
   pages = {582--594},
   publisher = {Society for Consumer Psychology},
-  title = {{Mediation analysis and categorical variables: The final frontier}},
+  title = {{Mediation Analysis and Categorical Variables: The Final Frontier.}},
   volume = {22},
   year = {2012},
 }
@@ -827,10 +828,10 @@
 @Article{Hicks2011,
   author = {Raymond Hicks and Dustin Tingley},
   file = {:Users/johansteen/Documents/ugent/papers/Hicks, Tingley - 2011 - The Stata Journal.pdf:pdf},
-  journal = {The Stata Journal},
+  journal = {The \proglang{Stata} Journal},
   number = {4},
   pages = {1--15},
-  title = {{Causal mediation analysis}},
+  title = {{Causal Mediation Analysis.}},
   volume = {11},
   year = {2011},
 }
@@ -842,7 +843,7 @@
   month = {aug},
   number = {4},
   pages = {627--660},
-  title = {{Quantifying and Testing Indirect Effects in Simple Mediation Models When the Constituent Paths Are Nonlinear}},
+  title = {{Quantifying and Testing Indirect Effects in Simple Mediation Models When the Constituent Paths Are Nonlinear.}},
   volume = {45},
   year = {2010},
 }
@@ -855,7 +856,7 @@
   number = {4},
   pages = {279--313},
   pmid = {19071996},
-  title = {{Average causal effects from nonrandomized studies: a practical guide and simulated example.}},
+  title = {{Average Causal Effects from Nonrandomized Studies: A Practical Guide and Simulated Example.}},
   volume = {13},
   year = {2008},
 }
@@ -867,7 +868,7 @@
   month = {may},
   number = {5},
   pages = {437--452},
-  title = {{Post-Breakup Unwanted Pursuit: A Refined Analysis of the Role of Romantic Relationship Characteristics}},
+  title = {{Post-Breakup Unwanted Pursuit: A Refined Analysis of the Role of Romantic Relationship Characteristics.}},
   volume = {27},
   year = {2012},
 }
@@ -880,7 +881,7 @@
   number = {7},
   pages = {739--42},
   pmid = {21415028},
-  title = {{Invited commentary: G-computation--lost in translation?}},
+  title = {{Invited Commentary: G-computation--Lost in Translation?}},
   volume = {173},
   year = {2011},
 }
@@ -895,10 +896,10 @@
 }
 
 @Manual{R:boot,
-  title = {\pkg{boot}: Bootstrap \proglang{R} (\proglang{S}-Plus) Functions},
+  title = {\pkg{boot}: Bootstrap \proglang{R} (\proglang{S-PLUS}) Functions},
   author = {Angelo Canty and B. D. Ripley},
   year = {2014},
-  note = {\proglang{R} package version 1.3-13},
+  note = {\proglang{R}~package version~1.3-13},
 }
 
 @Article{R:multcomp,
@@ -912,37 +913,38 @@
 }
 
 @Article{R:mediation,
-  title = {{\pkg{mediation}}: {\proglang{R}} Package for Causal Mediation Analysis},
-  author = {Dustin Tingley and Teppei Yamamoto and Kentaro Hirose and Luke Keele and Kosuke Imai},
-  journal = {Journal of Statistical Software},
-  year = {2014},
-  volume = {59},
-  number = {5},
-  pages = {1--38},
-  url = {http://www.jstatsoft.org/v59/i05/},
-}
+    title = {\pkg{mediation}: \proglang{R} Package for Causal Mediation Analysis},
+    author = {Dustin Tingley and Teppei Yamamoto and Kentaro Hirose and Luke Keele and Kosuke Imai},
+    journal = {Journal of Statistical Software},
+    year = {2014},
+    volume = {59},
+    number = {5},
+    pages = {1--38},
+    url = {http://www.jstatsoft.org/v59/i05/},
+  }
 
 @Article{R:VGAM,
-  title = {Vector Generalized Additive Models},
-  author = {Thomas W. Yee and C. J. Wild},
-  journal = {Journal of Royal Statistical Society, Series B},
-  year = {1996},
-  volume = {58},
-  number = {3},
-  pages = {481--493},
-}
+    title = {The \pkg{VGAM} Package for Categorical Data Analysis},
+    author = {Thomas W. Yee},
+    journal = {Journal of Statistical Software},
+    year = {2010},
+    volume = {32},
+    number = {10},
+    pages = {1--34},
+    url = {http://www.jstatsoft.org/v32/i10/},
+  }
 
 @Manual{R:gam,
   title = {\pkg{gam}: Generalized Additive Models},
   author = {Trevor Hastie},
   year = {2013},
-  note = {\proglang{R} package version 1.09.1},
+  note = {\proglang{R}~package version~1.09.1},
   url = {http://CRAN.R-project.org/package=gam},
 }
 
 @Book{R:car,
   title = {An {\proglang{R}} Companion to Applied Regression},
-  edition = {Second},
+  edition = {2nd},
   author = {John Fox and Sanford Weisberg},
   year = {2011},
   publisher = {Sage},
@@ -954,13 +956,13 @@
   title = {\pkg{SuperLearner}: Super Learner Prediction},
   author = {Eric Polley and Mark van der Laan},
   year = {2014},
-  note = {\proglang{R} package version 2.0-15},
+  note = {\proglang{R}~package version~2.0-15},
   url = {http://CRAN.R-project.org/package=SuperLearner},
 }
 
 @misc{iposurl,
 author = {{Ghent University and Catholic University of Louvain}},
-title = {Interdisciplinary Project for the Optimisation of Separation trajectories - divorce and separation in Flanders},
+title = {Interdisciplinary Project for the Optimisation of Separation Trajectories - Divorce and Separation in Flanders},
 year = {2010},
 url = {http://www.scheidingsonderzoek.ugent.be/index-eng.html}
 }
@@ -969,14 +971,14 @@ url = {http://www.scheidingsonderzoek.ugent.be/index-eng.html}
 author = {Muth\'{e}n, Bengt},
 file = {:Users/johansteen/Documents/ugent/papers/Muth\'{e}n - 2011 - Unknown.pdf:pdf},
 mendeley-groups = {medflex},
-title = {{Applications of Causally Defined Direct and Indirect Effects in Mediation Analysis using SEM in Mplus}},
+title = {{Applications of Causally Defined Direct and Indirect Effects in Mediation Analysis Using SEM in \proglang{Mplus}}},
 url = {www.statmodel.com/download/causalmediation.pdf},
 year = {2011}
 }
 
 @Manual{mplus,
   author = {L. K. Muth{\'e}n and B. O. Muth{\'e}n},
-  title = {\pkg{Mplus} User's Guide. Seventh Edition.},
+  title = {\proglang{Mplus} User's Guide. 7th Edition.},
   year = {1998-2012},
   address = {Muth{\'e}n \& Muth{\'e}n, Los Angeles, CA}
 }
